<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/pale_blue">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_normal_16"
        android:layout_marginRight="@dimen/spacing_normal_16"
        android:layout_marginTop="22dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_1"
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_1"/>
            <com.codesgood.views.JustifiedTextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_1_content"/>
            <TextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_2"/>
            <com.codesgood.views.JustifiedTextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_2_content"/>
            <TextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_3"/>
            <com.codesgood.views.JustifiedTextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_3_content"/>
            <TextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_4"/>
            <com.codesgood.views.JustifiedTextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_4_content"/>
            <TextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_5"/>
            <com.codesgood.views.JustifiedTextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_5_content"/>
            <TextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_6"/>
            <com.codesgood.views.JustifiedTextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_6_content"/>
            <TextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_7"/>
            <com.codesgood.views.JustifiedTextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_7_content"/>
            <TextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_8"/>
            <com.codesgood.views.JustifiedTextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_8_content"/>
            <TextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_9"/>
            <com.codesgood.views.JustifiedTextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_9_content"/>
            <TextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_10"/>
            <com.codesgood.views.JustifiedTextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_10_content"/>
            <TextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_11"/>
            <com.codesgood.views.JustifiedTextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_11_content"/>
            <TextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_12"/>
            <com.codesgood.views.JustifiedTextView
                style="@style/HelpTcsLargeText"
                android:text="@string/help_tcs_p_12_content"/>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>