<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/spacing_normal_16"
              android:paddingRight="@dimen/spacing_small_8"
              android:paddingTop="@dimen/spacing_small_8"
              android:background="@color/white">

    <RelativeLayout
        android:id="@+id/chat_block"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            style="@style/HelpMenuText"
            android:text="@string/blocked_users"/>
        <ImageView
            style="@style/HelpMenuIcon"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue_grey"/>
    <RelativeLayout
        android:id="@+id/chat_wallpaper"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            style="@style/HelpMenuText"
            android:text="@string/chat_wallpaper"/>
        <ImageView
            style="@style/HelpMenuIcon"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue_grey"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            style="@style/HelpMenuText"
            android:text="@string/save_incoming_media"/>
        <Switch
            android:id="@+id/chat_settinga_switch"
            android:layout_width="68dp"
            android:layout_height="24dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue_grey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:alpha="0.54"
            android:textColor="@color/navy"
            android:text="@string/chat_sett"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="7dp"
        android:id="@+id/chat_backup"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            style="@style/HelpMenuText"
            android:text="@string/chat_backup"/>
        <ImageView
            style="@style/HelpMenuIcon"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue_grey"/>

    <RelativeLayout
        android:id="@+id/chat_archive"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            style="@style/HelpMenuText"
            android:text="@string/archive_all_chats"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue_grey"/>
    <RelativeLayout
        android:id="@+id/chat_clear_all"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            style="@style/HelpMenuText"
            android:text="@string/clear_all_chats"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue_grey"/>
    <RelativeLayout
        android:id="@+id/chat_delete_all"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            style="@style/HelpMenuText"
            android:text="@string/delete_all_chats"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue_grey"/>
</LinearLayout>