<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/spacing_normal_16"
              android:paddingRight="@dimen/spacing_small_8"
              android:background="@color/white">

    <RelativeLayout
        android:id="@+id/help_feedback"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            style="@style/HelpMenuText"
            android:text="@string/feedback"/>
        <ImageView
            style="@style/HelpMenuIcon"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue_grey"/>
    <RelativeLayout
        android:id="@+id/help_faq"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            style="@style/HelpMenuText"
            android:text="@string/faq"/>
        <ImageView
            style="@style/HelpMenuIcon"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue_grey"/>
    <RelativeLayout
        android:id="@+id/help_contact"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            style="@style/HelpMenuText"
            android:text="@string/contact_us"/>
        <ImageView
            style="@style/HelpMenuIcon"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue_grey"/>
    <RelativeLayout
        android:id="@+id/help_terms"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            style="@style/HelpMenuText"
            android:text="@string/terms_and_conditions"/>
        <ImageView
            style="@style/HelpMenuIcon"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue_grey"/>
    <RelativeLayout
        android:id="@+id/help_privacy"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <TextView
            style="@style/HelpMenuText"
            android:text="@string/privacy_policy"/>
        <ImageView
            style="@style/HelpMenuIcon"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_blue_grey"/>

</LinearLayout>
