<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/spacing_normal_16"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/invite"
                    android:textColor="@color/navy"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/btn_invite_sms"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/sms"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/InviteText"
                    android:text="@string/invite_by_sms"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/btn_invite_email"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/email"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/InviteText"
                    android:text="@string/invite_by_email"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/btn_invite_skype"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/skype"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/InviteText"
                    android:text="@string/invite_skype_friends"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/btn_invite_email_copy"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/email_copy_3"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/InviteText"
                    android:text="@string/invite_messenger"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/btn_invite_wechat"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/wechat"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/InviteText"
                    android:text="@string/invite_wechat_friends"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/btn_invite_snapchat"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/snapchat"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/InviteText"
                    android:text="@string/invite_snapchat_friends"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/btn_invite_telegram"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/telegram"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/InviteText"
                    android:text="@string/invite_telegram_friends"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/btn_invite_link"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_link"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="24dp"
                    style="@style/InviteText"
                    android:text="@string/copy_invitation_link"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/btn_invite_share"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_share"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="24dp"
                    style="@style/InviteText"
                    android:text="@string/share"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
